--- a/boxmodel.css
+++ b/boxmodel.css
@@ -1,5 +1,5 @@
 /*Content - The content of the box, where text and images appear
-Padding - Clears an area around the content. The padding is transparent
+Padding -This Clears an area around the content. The padding is transparent
 Border - A border that goes around the padding and content
 Margin - Clears an area outside the border. The margin is transparent. margins dont define width of box, just how far contents should be pushed away from it. */
 
